# System-Control

./: .env  .env.example  .gitignore  OPIK_IMPLEMENTATION_SUMMARY.md  OPIK_SETUP.md  QUICK_START_OPIK.md  README.md  README_main.md  main_file.py  pyproject.toml  test_opik_integration.py  verify_setup.py
.kiro/specs/improve-voice-assistant-accuracy/: design.md  requirements.md  tasks.md
.kiro/specs/setup-voice-assistant/: design.md  requirements.md  tasks.md
